# parquet-benchmarking

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
data/: alltypes_tiny_pages.parquet  alltypes_tiny_pages_plain.parquet  binary.parquet  mvp.parquet  small.parquet
generate_tables/: __main__.py  generate.py  types.py
parquet_benchmarking/inspectpq/: __main__.py
parquet_benchmarking/parquet_thrift/: README.md  ttypes.py
scripts/: generate_canonical_spark_data.py  generate_mvp_data.py  inspect_parquet.py
