[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "generate_tables"
authors = [
    {name = "Jay Chia", email = "jay@eventualcomputing.com"},
]
description = "Generating tables of data as various file formats"
readme = "README.md"
keywords = ["dataframe", "benchmarking"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["pyarrow==12.0.0"]
dynamic = ["version"]

[project.scripts]
tablegen = "generate_tables.__main__:main"
