[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet_benchmarking"
authors = [
    {name = "Jay Chia", email = "jay@eventualcomputing.com"},
]
description = "Generating tables of data as various file formats"
readme = "README.md"
keywords = ["dataframe", "benchmarking"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["data*"]
